maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:14: error: ':' expected but ')' found.
def keepHandOnSideWall(Int){
                          ^PledgeMaze:44: error: identifier expected but '}' found.
}
^